[DE PE SSE mobile] Corrected cropping of text in document title

--- a/apps/common/mobile/resources/less/common-ios.less
+++ b/apps/common/mobile/resources/less/common-ios.less
@@ -70,16 +70,16 @@
     }
 
     .navbar, .navbar-bg, .subnavbar {
+        background-color: var(--f7-navbar-bg-color);
+
         a.btn-doc-back {
             width: 22px;
         }
-        background-color: var(--f7-navbar-bg-color);
+
         .title {
-            font-weight: 600;
+            font-weight: normal;
             color: @text-normal;
-            //line-height: 17px;
-            //max-height: 34px;
-            //overflow: hidden;
+            font-size: 15px;
         }
         .navbar-inner, .subnavbar-inner {
             z-index: auto;
