--- a/apps/common/mobile/resources/less/common-material.less
+++ b/apps/common/mobile/resources/less/common-material.less
@@ -431,6 +431,8 @@
         .title {
             margin-left: var(--f7-navbar-title-margin-left);
             margin-right: var(--f7-navbar-title-margin-left);
+            font-size: 14px;
+            font-weight: normal;
         }
     }
 
